welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:6: error: '(' expected but identifier found.
	if nums(k) > vale {
           ^